<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_card_view"
        android:layout_margin="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/rider_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="1dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/card_pic_description" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">
        <TextView
            android:id="@+id/rider_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rider_text"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_text"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_text"
            android:textSize="24sp"/>

    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>