<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/home_location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/location_text"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/home_day_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/main_screen_when_hint"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/home_time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/main_screen_time_hint"
        android:inputType="textCapWords"/>


</LinearLayout>